--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ tracing-bunyan-formatter = "0.3"
 actix-web = "4"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 serde = { version = "1", features = ["derive"] }
+serde-aux = "4"
 sqlx = { version = "0.7", features = [
     "runtime-tokio-rustls",
     "postgres",
