--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,15 @@ config = "0.14"
 uuid = { version = "1", features = ["v4"] }
 chrono = "0.4"
 secrecy = { version = "0.8", features = ["serde"] }
+unicode-segmentation = "1"
+validator = "0.14"
+reqwest = { verison = "0.16", default-features = false, features = [
+    "json",
+    "rustls-tls",
+] }
 
 [dev-dependencies]
-reqwest = "0.11"
 once_cell = "1"
+fake = "~2.3"
+quickcheck = "0.9.2"
+quickcheck_macros = "0.9.1"
