--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,8 +31,8 @@ uuid = { version = "1", features = ["v4"] }
 chrono = "0.4"
 secrecy = { version = "0.8", features = ["serde"] }
 unicode-segmentation = "1"
-validator = "0.14"
-reqwest = { verison = "0.16", default-features = false, features = [
+validator = "0.16"
+reqwest = { version = "0.11", default-features = false, features = [
     "json",
     "rustls-tls",
 ] }
@@ -42,3 +42,5 @@ once_cell = "1"
 fake = "~2.3"
 quickcheck = "0.9.2"
 quickcheck_macros = "0.9.1"
+wiremock = "0.6"
+serde_json = "1"
