--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,7 @@ reqwest = { version = "0.11", default-features = false, features = [
     "json",
     "rustls-tls",
 ] }
+rand = { version = "0.8", features = ["std_rng"] }
 
 [dev-dependencies]
 once_cell = "1"
@@ -44,3 +45,4 @@ quickcheck = "0.9.2"
 quickcheck_macros = "0.9.1"
 wiremock = "0.6"
 serde_json = "1"
+linkify = "0.10"
