--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ name = "zero2prod"
 
 [dependencies]
 anyhow = "1"
+base64 = "0.22"
 thiserror = "1"
 tracing = { version = "0.1", features = ["log"] }
 tracing-log = "0.2"
