feat: add encryption for user authentication

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ name = "zero2prod"
 [dependencies]
 anyhow = "1"
 base64 = "0.22"
+sha3 = "0.10"
 thiserror = "1"
 tracing = { version = "0.1", features = ["log"] }
 tracing-log = "0.2"
