--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ uuid = { version = "1", features = ["v4"] }
 chrono = "0.4"
 secrecy = { version = "0.8", features = ["serde"] }
 unicode-segmentation = "1"
+urlencoding = "2"
 validator = "0.16"
 reqwest = { version = "0.11", default-features = false, features = [
     "json",
