--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,12 +40,9 @@ validator = "0.16"
 reqwest = { version = "0.11", default-features = false, features = [
     "json",
     "rustls-tls",
+    "cookies",
 ] }
 rand = { version = "0.8", features = ["std_rng"] }
-htmlescape = "0.3"
-hmac = { version = "0.12", features = ["std"] }
-hex = "0.4"
-sha2 = "0.10"
 
 [dev-dependencies]
 once_cell = "1"
