--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -20,6 +20,10 @@ jobs:
           POSTGRES_DB: postgres
         ports:
           - 5432:5432
+      redis:
+        image: redis:7
+        ports:
+          - 6379:6379
     steps:
       - uses: actions/checkout@v3
       - uses: dtolnay/rust-toolchain@stable
@@ -32,6 +36,9 @@ jobs:
         run: sudo apt-get update && sudo apt-get install -y postgresql-client
       - name: Migrate database
         run: SKIP_DOCKER=true ./scripts/init_db.sh
+      - name: Check sqlx-data.json is up-to-date
+        run: |
+          cargo sqlx prepare --workspace --check
       - name: Run tests
         run: cargo test
 
@@ -87,6 +94,10 @@ jobs:
           POSTGRES_DB: postgres
         ports:
           - 5432:5432
+      redis:
+        image: redis:7
+        ports:
+          - 6379:6379
     steps:
       - uses: actions/checkout@v3
       - uses: dtolnay/rust-toolchain@stable
@@ -97,7 +108,9 @@ jobs:
         run: cargo install sqlx-cli --version ${{ env.SQLX_VERSION }} --features ${{ env.SQLX_FEATURES }} --no-default-features --locked
       - name: Install psql
         run: sudo apt-get update && sudo apt-get install -y postgresql-client
+      - name: Install cargo-tarpaulin
+        run: cargo install cargo-tarpaulin
       - name: Migrate database
         run: SKIP_DOCKER=true ./scripts/init_db.sh
       - name: Generate coverage report
-        run: cargo install cargo-tarpaulin && cargo tarpaulin --verbose --workspace 
+        run: cargo tarpaulin --verbose --workspace 
