--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,8 @@ name = "zero2prod"
 
 [dependencies]
 actix-web-flash-messages = { version = "0.4", features = ["cookies"] }
+actix-web = "4"
+actix-session = { version = "0.9", features = ["redis-rs-tls-session"] }
 anyhow = "1"
 argon2 = { version = "0.5", features = ["std"] }
 base64 = "0.22"
@@ -20,7 +22,6 @@ tracing-log = "0.2"
 tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
 tracing-actix-web = "0.7"
 tracing-bunyan-formatter = "0.3"
-actix-web = "4"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 serde = { version = "1", features = ["derive"] }
 serde-aux = "4"
@@ -32,9 +33,10 @@ sqlx = { version = "0.7", features = [
     "migrate",
 ] }
 config = "0.14"
-uuid = { version = "1", features = ["v4"] }
+uuid = { version = "1", features = ["v4", "serde"] }
 chrono = "0.4"
 secrecy = { version = "0.8", features = ["serde"] }
+serde_json = "1"
 unicode-segmentation = "1"
 urlencoding = "2"
 validator = "0.16"
